<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/l1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:text="@string/configured_tank"
            android:textColor="@color/subHeadingColor"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/plusImage"
            android:layout_marginTop="20sp"
            android:src="@drawable/plus_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:visibility="gone"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="50sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/number_of_tank"
            android:textColor="@color/subHeadingColor"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:saveEnabled="false"
            android:background="@drawable/_border"
            android:layout_marginTop="5sp"
            android:inputType="numberDecimal"
            android:id="@+id/numberOfTank"
            android:paddingRight="10sp"
            android:textColor="@color/subHeadingColor"
            android:textSize="15sp"
            android:hint="eg. 2"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50sp" />

        <TextView
            android:layout_marginTop="10sp"
            android:text="@string/number_of_nozzel"
            android:textColor="@color/subHeadingColor"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:saveEnabled="false"
            android:id="@+id/numberOfNozzel"
            android:background="@drawable/_border"
            android:layout_marginTop="5sp"
            android:inputType="numberDecimal"
            android:paddingRight="10sp"
            android:textColor="@color/subHeadingColor"
            android:textSize="15sp"
            android:hint="eg. 2"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="50sp" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/submit"
            android:layout_marginTop="50sp"
            android:background="@color/oreng_bg"
            android:text="@string/_submit"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:layout_margin="3sp"
        android:id="@+id/myTankData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>