<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/layout_background"
    android:layout_height="match_parent">

    <!--
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/parentlayout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/profilePicLayout"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/editLayout"
                android:layout_width="90sp"
                android:layout_height="90sp">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/menu"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FFFFFF"/>

                <ImageView
                    android:id="@+id/editProfileImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profilePicLayout"
            android:layout_centerVertical="true"
            android:orientation="vertical">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <EditText
                    android:singleLine="true"
                    android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:paddingLeft="10sp"
                    android:hint="@string/first_name"
                    android:background="@drawable/edit_feild"
                    android:id="@+id/name_Edit"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="40sp"
                    android:ems="10"
                    android:inputType="textCapWords"/>

                <EditText
                    android:layout_marginLeft="5sp"
                    android:singleLine="true"
                    android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:paddingLeft="10sp"
                    android:hint="@string/last_name"
                    android:background="@drawable/edit_feild"
                    android:id="@+id/lastname_Edit"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="40sp"
                    android:ems="10"
                    android:inputType="textCapWords"/>


            </LinearLayout>

            <EditText
                android:enabled="false"
                android:singleLine="true"
                android:paddingLeft="10sp"
                android:hint="@string/email"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_feild"
                android:id="@+id/email_Edit"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:ems="10"
                android:inputType="textEmailAddress"/>

            <EditText
                android:digits="0123456789"
                android:singleLine="true"
                android:maxLength="10"
                android:paddingLeft="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_feild"
                android:id="@+id/phone_Edit"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:ems="10"
                android:hint="@string/contact_no"
                android:inputType="phone"/>

            <TextView
                android:layout_marginBottom="50sp"
                android:id="@+id/updateTxt"
                android:text="@string/save"
                android:textSize="18sp"
                android:textColor="@color/buttonTextColor"
                android:gravity="center"
                android:background="@color/orange"
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="40sp"/>

        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>

</ScrollView>
