<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:id="@+id/parentLayout"
    android:focusableInTouchMode="true"
    android:background="@color/login_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textColor="@color/errorMsgColor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            
            <LinearLayout
                android:layout_marginBottom="5sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:hint="@string/_RO"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack_1000"
                    android:textSize="20sp"
                    android:background="@null" />


                <EditText
                    android:layout_marginTop="10sp"
                    android:paddingLeft="5sp"
                    android:id="@+id/emp_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:hint="@string/_enter_RO"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:background="@null" />

                <View
                    android:layout_marginTop="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/gray"/>

            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <EditText
                    android:background="@null"
                    android:id="@+id/password"
                    android:layout_weight="1"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/eyeIcon"
                    android:src="@drawable/eye_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/gray"/>


            <Button

                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@color/orange"
                android:text="@string/_continue"
                android:textColor="@color/buttonTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:visibility="gone"
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/forgot_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/textColor"/>

        </LinearLayout>

        <ImageView
            android:scaleType="fitXY"
            android:src="@drawable/login_bg"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="200sp" />

    </RelativeLayout>

</RelativeLayout>