<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentlayout"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/backLayout"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10sp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow_white" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/change_password"
            android:textColor="@color/titleColor"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10sp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="20sp"
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profilePicLayout"
            android:layout_centerVertical="true"
            android:orientation="vertical">


            <LinearLayout
                android:paddingRight="10sp"
                android:background="@drawable/edit_feild"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <EditText
                    android:paddingLeft="10sp"
                    android:hint="@string/old_password"
                    android:background="@null"
                    android:id="@+id/oldpasswodedit"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="40sp"
                    android:ems="10"
                    android:inputType="textPassword" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/eye_old"
                    android:src="@drawable/eye_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:paddingRight="10sp"
                android:background="@drawable/edit_feild"
                android:gravity="center_vertical"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <EditText
                    android:paddingLeft="10sp"
                    android:hint="@string/new_password"
                    android:background="@null"
                    android:id="@+id/newpasswordedit"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="40sp"
                    android:ems="10"
                    android:inputType="textPassword" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/eye_new"
                    android:src="@drawable/eye_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:paddingRight="10sp"
                android:gravity="center_vertical"
                android:background="@drawable/edit_feild"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40sp">
                <EditText
                    android:paddingLeft="10sp"
                    android:background="@null"
                    android:id="@+id/confirmPasswrodedit"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="40sp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/eye_confirm"
                    android:src="@drawable/eye_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/updateTxt"
                android:text="@string/update"
                android:textSize="18sp"
                android:textColor="@color/buttonTextColor"
                android:gravity="center"
                android:background="@color/orange"
                android:layout_marginTop="15sp"
                android:layout_width="match_parent"
                android:layout_height="40sp" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>